--- a/documentation/package.json
+++ b/documentation/package.json
@@ -4,11 +4,21 @@
   "description": "docs data and validator",
   "main": "index.js",
   "scripts": {
+		"check": "node ./src/index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "ajv": "^8.17.1"
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "@produck/eslint-rules": "^0.2.0",
+    "@produck/idiom": "^0.3.2",
+    "@produck/ow": "^0.1.2",
+    "eslint": "^9.15.0",
+    "typescript-eslint": "^8.16.0"
   }
 }
