--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,40 +1,46 @@
 {
-	"name": "@ripple.tju/train",
+	"name": "train",
 	"version": "0.0.1",
 	"description": "A Quasar Project",
 	"productName": "Quasar App",
 	"author": "chaoslee <chaos2lee@qq.com>",
+	"type": "module",
 	"private": true,
 	"scripts": {
-		"lint": "eslint --fix --ext .js,.ts,.vue ./",
+		"lint": "eslint --fix -c ./eslint.config.js \"./src*/**/*.{ts,js,cjs,mjs,vue}\"",
 		"format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
 		"test": "echo \"No test specified\" && exit 0",
 		"dev": "quasar dev",
-		"build": "quasar build"
+		"build": "quasar build",
+		"postinstall": "quasar prepare"
 	},
 	"dependencies": {
-		"vue-i18n": "^10.0.5",
-		"pinia": "^2.3.0",
-		"@quasar/extras": "^1.16.14",
-		"quasar": "^2.17.4",
-		"vue": "^3.5.13",
-		"vue-router": "^4.5.0"
+		"@quasar/extras": "^1.16.4",
+		"pinia": "^2.0.11",
+		"quasar": "^2.16.0",
+		"vue": "^3.4.18",
+		"vue-i18n": "^9.2.2",
+		"vue-router": "^4.0.12"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.62.0",
-		"@typescript-eslint/parser": "^5.62.0",
-		"eslint": "^8.57.1",
-		"eslint-plugin-vue": "^9.32.0",
-		"eslint-config-prettier": "^8.10.0",
-		"prettier": "^2.8.8",
-		"@types/node": "^22.10.1",
-		"@intlify/vite-plugin-vue-i18n": "^3.4.0",
-		"@quasar/app-vite": "^1.11.0",
-		"autoprefixer": "^10.4.20",
-		"typescript": "^5.7.2"
+		"@eslint/js": "^9.14.0",
+		"@intlify/unplugin-vue-i18n": "^2.0.0",
+		"@produck/eslint-rules": "^0.2.1",
+		"@quasar/app-vite": "^2.0.0",
+		"@types/node": "^20.5.9",
+		"@vue/eslint-config-prettier": "^10.1.0",
+		"@vue/eslint-config-typescript": "^14.1.3",
+		"autoprefixer": "^10.4.2",
+		"eslint": "^9.14.0",
+		"eslint-plugin-vue": "^9.30.0",
+		"globals": "^15.12.0",
+		"prettier": "^3.3.3",
+		"typescript": "~5.5.3",
+		"vite-plugin-checker": "^0.8.0",
+		"vue-tsc": "^2.0.29"
 	},
 	"engines": {
-		"node": "^18 || ^16 || ^14.19",
+		"node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
 		"npm": ">= 6.13.4",
 		"yarn": ">= 1.21.1"
 	}
