--- a/documentation/package.json
+++ b/documentation/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "@ripple.tju/train-documentation",
-  "version": "0.0.0",
-  "description": "docs data and validator",
-  "main": "index.js",
-  "scripts": {
+	"name": "@ripple.tju/train-documentation",
+	"version": "0.0.0",
+	"description": "docs data and validator",
+	"main": "index.js",
+	"scripts": {
 		"check": "node ./script/check.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "UNLICENSED",
-  "dependencies": {
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.16.0",
-    "@produck/eslint-rules": "^0.2.1",
-    "@produck/idiom": "^0.4.0",
-    "@produck/ow": "^0.1.2",
-    "eslint": "^9.16.0",
-    "typescript-eslint": "^8.17.0"
-  }
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "UNLICENSED",
+	"dependencies": {
+		"ajv": "^8.17.1",
+		"ajv-formats": "^3.0.1"
+	},
+	"devDependencies": {
+		"@produck/idiom": "^0.4.0",
+		"@produck/ow": "^0.1.2"
+	}
 }
