--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
 	],
 	"license": "UNLICENSED",
 	"devDependencies": {
-		"lerna": "^8.1.9"
+		"@eslint/js": "^9.16.0",
+		"@produck/eslint-rules": "^0.2.1",
+		"@types/node": "^22.10.1",
+		"eslint": "^9.16.0",
+		"globals": "^15.13.0",
+		"lerna": "^8.1.9",
+		"typescript": "^5.7.2",
+		"typescript-eslint": "^8.17.0"
 	}
 }
