documentation: [FIXED] doc: appendix

--- a/documentation/docs/b2e6826c-fa86-475c-a2ab-d05b24588f63/sections/appendix.json
+++ b/documentation/docs/b2e6826c-fa86-475c-a2ab-d05b24588f63/sections/appendix.json
@@ -18,7 +18,7 @@
 			"figure",
 			{
 				"src": "../assets/6-1.png",
-				"title": "（新闻报道：南都大数据研究院来了_广东记协网）",
+				"title": "南都大数据研究院来了_广东记协网",
 				"href": "http://www.gdjx.org.cn/sydt/content/post_695756.html"
 			}
 		],
@@ -32,7 +32,7 @@
 			"figure",
 			{
 				"src": "../assets/6-2.png",
-				"title": "（新闻报道：2019应用新闻传播十大创新案例揭晓，南都大数据研究院入选！ _搜狐新闻报道）",
+				"title": "2019应用新闻传播十大创新案例揭晓，南都大数据研究院入选！_搜狐新闻",
 				"href": "https://www.sohu.com/a/357506206_161795"
 			}
 		],
@@ -46,7 +46,7 @@
 			"figure",
 			{
 				"src": "../assets/6-3.png",
-				"title": "（新闻报道：南都《广州城市治理榜》入围“中国城市治理创新奖”_搜狐新闻）",
+				"title": "南都《广州城市治理榜》入围“中国城市治理创新奖”_搜狐新闻",
 				"href": "https://www.sohu.com/a/303417124_161795"
 			}
 		],
@@ -60,7 +60,7 @@
 			"figure",
 			{
 				"src": "../assets/6-4.png",
-				"title": "（新闻报道：回望南都2021高光时刻 未来将推动智媒转型“四轮”驱动_南方都市报）",
+				"title": "回望南都2021高光时刻 未来将推动智媒转型“四轮”驱动_南方都市报",
 				"href": "https://news.southcn.com/node_54a44f01a2/63aae85b11.shtml"
 			}
 		],
@@ -74,7 +74,7 @@
 			"figure",
 			{
 				"src": "../assets/6-5.png",
-				"title": "（视频报道：人工智能创新与治理论坛_N视频）",
+				"title": "人工智能创新与治理论坛_N视频",
 				"href": "https://mp.weixin.qq.com/s/yH2oP-TuIjOMyHnTPyZbwg"
 			}
 		],
@@ -88,7 +88,7 @@
 			"figure",
 			{
 				"src": "../assets/6-6.png",
-				"title": "（新闻报道：今天开始！在北上广深……_南方都市报）",
+				"title": "今天开始！在北上广深……_南方都市报",
 				"href": "https://mp.weixin.qq.com/s/K3jT93aqmXxtVUs3H-OBzw"
 			}
 		]
