@ripple.tju/train: [FIXED] some style

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,7 +2,7 @@
 	"name": "train",
 	"version": "0.0.1",
 	"description": "A Quasar Project",
-	"productName": "Quasar App",
+	"productName": "案例数据库",
 	"author": "chaoslee <chaos2lee@qq.com>",
 	"type": "module",
 	"private": true,
