--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
 		"pinia": "^2.3.0",
 		"quasar": "^2.17.4",
 		"vue": "^3.5.13",
+		"vue-data-ui": "^2.4.40",
 		"vue-i18n": "^10.0.5",
 		"vue-router": "^4.5.0"
 	},
