--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,22 +17,22 @@
 	"dependencies": {
 		"@quasar/extras": "^1.16.17",
 		"pinia": "^3.0.1",
-		"quasar": "^2.17.7",
+		"quasar": "^2.18.1",
 		"vue": "^3.5.13",
-		"vue-data-ui": "^2.6.3",
-		"vue-i18n": "^11.1.1",
+		"vue-data-ui": "^2.6.15",
+		"vue-i18n": "^11.1.2",
 		"vue-router": "^4.5.0"
 	},
 	"devDependencies": {
 		"@intlify/unplugin-vue-i18n": "^6.0.3",
-		"@quasar/app-vite": "^2.1.0",
+		"@quasar/app-vite": "^2.1.4",
 		"@vue/eslint-config-prettier": "^10.2.0",
-		"@vue/eslint-config-typescript": "^14.4.0",
-		"autoprefixer": "^10.4.20",
-		"eslint-plugin-vue": "^9.32.0",
-		"prettier": "^3.5.1",
-		"vite-plugin-checker": "^0.8.0",
-		"vue-tsc": "^2.1.10"
+		"@vue/eslint-config-typescript": "^14.5.0",
+		"autoprefixer": "^10.4.21",
+		"eslint-plugin-vue": "9.33.0",
+		"prettier": "^3.5.3",
+		"vite-plugin-checker": "^0.9.0",
+		"vue-tsc": "^2.2.8"
 	},
 	"engines": {
 		"node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
