--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,24 +15,24 @@
 		"postinstall": "quasar prepare"
 	},
 	"dependencies": {
-		"@quasar/extras": "^1.16.17",
-		"pinia": "^3.0.1",
-		"quasar": "^2.18.1",
-		"vue": "^3.5.13",
-		"vue-data-ui": "^2.6.15",
-		"vue-i18n": "^11.1.2",
-		"vue-router": "^4.5.0"
+		"@quasar/extras": "^1.17.0",
+		"pinia": "^3.0.3",
+		"quasar": "^2.18.2",
+		"vue": "^3.5.19",
+		"vue-data-ui": "2.6.15",
+		"vue-i18n": "^11.1.11",
+		"vue-router": "^4.5.1"
 	},
 	"devDependencies": {
-		"@intlify/unplugin-vue-i18n": "^6.0.3",
-		"@quasar/app-vite": "^2.1.4",
+		"@intlify/unplugin-vue-i18n": "^6.0.8",
+		"@quasar/app-vite": "^2.3.0",
 		"@vue/eslint-config-prettier": "^10.2.0",
-		"@vue/eslint-config-typescript": "^14.5.0",
+		"@vue/eslint-config-typescript": "^14.6.0",
 		"autoprefixer": "^10.4.21",
-		"eslint-plugin-vue": "9.33.0",
-		"prettier": "^3.5.3",
-		"vite-plugin-checker": "^0.9.0",
-		"vue-tsc": "^2.2.8"
+		"eslint-plugin-vue": "10.4.0",
+		"prettier": "^3.6.2",
+		"vite-plugin-checker": "^0.10.2",
+		"vue-tsc": "^3.0.6"
 	},
 	"engines": {
 		"node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
