--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,8 +18,8 @@
 		"@quasar/extras": "^1.17.0",
 		"pinia": "^3.0.3",
 		"quasar": "^2.18.2",
-		"vue": "^3.5.19",
-		"vue-data-ui": "2.6.15",
+		"vue": "^3.5.20",
+		"vue-data-ui": "2.17.11",
 		"vue-i18n": "^11.1.11",
 		"vue-router": "^4.5.1"
 	},
@@ -33,6 +33,9 @@
 		"prettier": "^3.6.2",
 		"vite-plugin-checker": "^0.10.2",
 		"vue-tsc": "^3.0.6"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-linux-x64-gnu": "4.48.1"
 	},
 	"engines": {
 		"node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
